style.css
body {
  margin: 0;
  min-height: 100vh;
  display: flex;
  justify-content: space-between;
  font-family: "Source Code Pro", monospace;
}

button {
  font-family: "Source Code Pro", monospace;
}

button.pageButton {
  padding: 20px 35px;
  align-self: flex-start;
  background: #eaeaea;
  color: #333333;
  font: normal normal normal 22px/28px Source Code Pro;
  text-align: left;
  border: none;
}

#sidebar {
  max-width: 300px;
  height: 100vh;
  background: #90ccac;
  display: flex;
  justify-content: space-between;
  flex-flow: column wrap;
  position: sticky;
  top: 0px;
  gap: 40px;
  font: normal normal normal 13px/17px Source Code Pro;
}

h1.sidebar {
  color: #ffffff;
  font: normal normal bold 30px/38px Source Code Pro;
}

#sidebar > div.sidebar {
  margin: 38px 87px 38px 30px;
}

#sidebar1 {
  display: flex;
  flex-direction: column;
  gap: 25px;
}

ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
  display: flex;
  flex-flow: column nowrap;
  gap: 20px;
}

#sidebar a:link,
#sidebar a:visited {
  color: white;
}

#footer {
  color: #ffffff;
}

main {
  display: flex;
  flex: 1 1 0;
  flex-flow: column wrap;
  align-items: center;
  justify-content: center;
  gap: 45px;
  margin: 0px 75px 150px 75px;
}

section {
  min-width: 860px;
  display: flex;
  flex: 1 1 auto;
  flex-flow: column wrap;
  padding: 0.5em;
  gap: 25px;
}

section > form {
  max-width: 860px;
  max-height: 420px;
  font: normal normal normal 22px/39px Source Code Pro;
  opacity: 0.4;
  margin-bottom: 25px;
}

section h1 {
  font: normal normal normal 40px/50px Source Code Pro;
  color: transparent;
  -webkit-text-stroke: 0.75px black;
}

#contactForm input::placeholder,
textarea::placeholder {
  font: italic normal 300 20px/25px Source Code Pro;
}

#contactForm input {
  font: italic normal 800 20px/25px Source Code Pro;
  resize: none;
  border-style: none none dashed none;
  border-bottom: 1px solid dashed;
  outline: none;
  padding: 0px 0px 2px 5px;
}

form > input {
  width: 25%;
}

#introSpan,
#detailsSpan {
  width: 95%;
}

#intro,
#details {
  width: 100%;
}

span {
  display: inline-block;
  flex-direction: column;
  vertical-align: baseline;
}

form label {
  color: red;
  font-size: 10px;
  font-style: normal;
  margin: -15px 0px -23px 0px;
  visibility: hidden;
  display: block;
}

form label.invalid {
  visibility: visible;
}

form input.invalid {
  border-color: red;
}

#chatUI {
  display: flex;
  flex-direction: column;
}

#chatUser {
  display: flex;
  justify-content: flex-start;
  align-items: flex-end;
  gap: 25px;
  padding: 0px 10px 20px;
}

p#chatUserName {
  font: normal normal normal 22px/28px Source Code Pro;
  color: #333333;
}

p#lastSeen {
  font: normal normal normal 13px/17px Source Code Pro;
  margin-top: -22px;
  color: #cccccc;
}

#chatFeed {
  border: 1px solid #b6bdc1;
  padding: 15px 35px 35px 35px;
  display: flex;
  flex-flow: column wrap;
  max-height: 860px;
}

#sendMessageForm {
  border: 15px solid #f4f6f7;
  display: flex;
  justify-content: space-between;
}

#chatMessages {
  display: flex;
  flex-flow: column nowrap;
  justify-content: space-between;
  align-items: flex-start;
  overflow-y: auto;
  gap: 15px;
  padding: 10px;
  max-height: 250px;
}

#chatMessages::-webkit-scrollbar {
  width: 0.4em;
}

::-webkit-scrollbar-thumb {
  background: #cccccc;
}

::-webkit-scrollbar-track {
  background: #ececec;
  border-radius: 5px;
}

#chatMessages > div {
  width: 250px;
  border-radius: 5px;
  position: relative;
  padding: 12px 30px 12px 15px;
  font: normal normal normal 14px/18px Source Code Pro;
  color: #333333;
  overflow-wrap: break-word;
  word-wrap: break-word;
  text-align: justify;
  white-space: normal;
}

.chatMessage.theirs {
  background: #e6f7ff;
}

.chatMessage.theirs:before {
  content: "";
  position: absolute;
  z-index: auto;
  bottom: 70%;
  left: 20px;
  height: 12px;
  width: 20px;
  background: inherit;
  box-sizing: border-box;
  transform: rotate(45deg) translate(-25%);
  border-bottom: inherit;
  border-right: inherit;
  box-shadow: inherit;
}

.chatMessage.mine {
  background: #f4f6f7;
  align-self: flex-end;
}

.chatMessage.mine:before {
  content: "";
  position: absolute;
  top: 100%;
  left: 263px;
  height: 8px;
  width: 10px;
  background: inherit;
  box-sizing: border-box;
  transform: rotate(45deg) translate(-50%);
}

#gift {
  background: #f4f6f7;
  padding: 4px 22.5px 20px;
  display: flex;
  flex-flow: column;
  gap: 5px;
  transition: all 0.5s;
}

#gift > span {
  display: flex;
  flex-flow: row wrap;
  align-items: center;
  justify-content: space-around;
}

.clicked {
  transform: scale(1.05);
}

#gift img {
  height: 72px;
  width: 72px;
}

#giftIcon {
  font-size: 25px;
}

#gift > a {
  color: #333333;
  align-self: center;
}

#sendMessageForm {
  background: #f4f6f7;
}

#messageInput {
  font: normal normal normal 14px/18px Source Code Pro;
  padding: 0px 25px;
  border-radius: 8px 0px 0px 8px;
  border-style: none;
  border-right: none;
  flex: 1;
}

#messageInput:focus {
  outline-color: #cccccc;
}

#messageInput::-webkit-input-placeholder {
  color: #cccccc;
}

#sendMessageButton {
  border-style: none;
  background: #e6f7ff;
  padding: 20px;
}

#tableTitle {
  display: flex;
  align-items: center;
  gap: 40px;
}

#tableResetButton {
  flex: 0 1 auto;
  align-self: center;
}

table {
  width: 100%;
  display: flex;
  border-collapse: collapse;
  color: #333333;
  font: normal normal normal 18px/23px "Source Code Pro", monospace;
  text-align: start;
  overflow-wrap: break-word;
  word-wrap: break-word;
  white-space: normal;
}

#tableHeader {
  background: #aebed8;
  color: white;
  display: flex;
  justify-content: space-evenly;
  padding: 0px 10px;
}

th:nth-of-type(1),
th:nth-of-type(4) {
  flex: 1.5;
}

th:nth-of-type(2) {
  flex: 1;
  text-align: right;
}

.blankCol {
  flex: 0 1 6%;
}

th:nth-of-type(5) {
  flex: 0.5;
}

th {
  font-weight: 600;
  padding: 30px 25px;
  text-align: left;
}

td {
  padding: 15px 30px;
}

div.user.tableElement {
  display: flex;
  flex-direction: column wrap;
  justify-content: flex-start;
  align-items: center;
}

.table.user {
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 25px;
  flex: 1;
}

.tableImg {
  width: 48px;
  height: 48px;
  border-radius: 50px;
  display: inline-flex;
  justify-content: center;
  align-content: center;
  text-align: center;
  color: #f4f6f7;
  -webkit-text-stroke: 0.15px black;
  font: normal normal 900 30px/23px "Source Code Pro", monospace;
}

.action {
  text-decoration: underline;
  color: #333333;
}

